kubernetes/apps/default/echo-auth/app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: echo-auth-oauth-policy
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: echo-auth

  extAuth:
    http:
      backendRefs:
        - name: oauth2proxy-oauth2-proxy # The K8s Service for OAuth2 Proxy
          namespace: security
          port: 80

      # Define which headers from the OAuth2 Proxy response (200 OK)
      # should be copied to the request sent to your backend.
      headersToBackend:
        - "Authorization"       # The Bearer Token (JWT)
        - "X-Auth-Request-User" # The Email/User ID
        - "X-Auth-Request-Email"
  # oidc:
  #   provider:
  #     issuer: "https://auth.rnatr.com/application/o/echo-auth"
  #   clientID: "zervQZYSRM5uyYvSwnscHaQLQdFFz7NRLiHFxpIx"
  #   clientSecret:
  #     name: echo-auth-client-secret
  #   redirectURL: "https://echo-auth.rnatr.com/oauth2/callback"
  #   forwardBearerToken: true

  # 2. JWT configuration extracts claims from that token into headers
  # jwt:
  #   providers:
  #     - name: authentik-provider
  #       issuer: "https://auth.rnatr.com/application/o/echo-auth"
  #       # Envoy must verify the signature before extracting claims.
  #       # Ensure this URI matches your Authentik JWKS endpoint.
  #       remoteJWKS:
  #         uri: "https://auth.rnatr.com/application/o/echo-auth/jwks/"
  #       claimToHeaders:
  #         - claim: email
  #           header: X-User-Email
  #         - claim: name
  #           header: X-User-Name
  #         - claim: preferred_username
  #           header: X-User-ID
